0.10
 - Fix EXAMPLE2 in doc.
 - Improve SYNOPSIS section in doc.
 - Move bugtracker to github.
 - Rewrite doc to use of =head2.
 - Update COPYRIGHT year.
 - Update LICENSE AND COPYRIGHT section in doc.
 - Update Module::Install to 1.19 version.
 - Update SYNOPSIS section in doc.

0.09 2020-01-11T23:37:55+01:00
 - Change my github username.
 - Improve test cover of 03-new.t.
 - Improve test of 04-parse.t.
 - Update copyright years.

0.08 2018-02-10T13:28:34+01:00
 - Add Config::Dot::Array to SEE ALSO section in doc.
 - Fix Makefile.PL for new version of Perl and no default »use lib '.'«.
 - Update Module::Install to 1.19 version.
 - Update author name.
 - Update copyright years.

0.07 2015-09-21T22:30:29+02:00
 - Improve LICENSE AND COPYRIGHT section in doc.
 - Improve SEE ALSO section in doc.
 - Move author tests to xt/ directory.
 - Remove diacritics from author name.
 - Update Module::Install to 1.16 version.
 - Update copyright years.

0.06 2014-08-17T11:58:11+02:00
 - Fix LICENSE file.
 - Improve doc.
 - Update Module::Install to 1.10 version.

0.05 2014-03-06
 - Add 'readme_from' directive to Makefile.PL.
 - Add LICENSE.
 - Add error check for newline in value. It's inconsistent.
 - Add missing Error::Pure::Utils::clean() after error in tests.
 - Fix ERRORS section in doc.
 - Rewrite B<> to C<> in doc for code parameters and methods.
 - Update dependency of Error::Pure to 0.16 version.

0.04 2013-09-21
 - Add SIGNATURE.
 - Add Test::NoWarnings to tests.
 - Add dependency for perl (based on Error::Pure).
 - Rewrite Changes file to CPAN::Changes::SPEC format.
 - Update req. modules version.

0.03 2012-08-03
 - Add git repository to doc.
 - Add 'callback' parameter.

0.02 2012-07-24
 - Change versions of my modules to last version.
 - Fix serialize with $INPUT_RECORD_SEPARATOR.
 - Remove obsolete code.

0.01 2012-06-22
 - First version.