@@ -2,6 +2,7 @@
  - Fix EXAMPLE2 in doc.
  - Improve SYNOPSIS section in doc.
  - Move bugtracker to github.
+ - Rename example files to better names.
  - Rewrite doc to use of =head2.
  - Update COPYRIGHT year.
  - Update LICENSE AND COPYRIGHT section in doc.
